Bug 495648.  Work around yet more listbox suckage: it'll randomly create frames for content it hasn't included in its row count!  r=enn, sr=roc pending